<resources>
    <string name="app_name">GeometryCalculator</string>

    <!-- Автор -->
    <string name="author_name">Алексеев Павел Васильевич</string>
    <string name="author_group">ИСТ-33</string>
    <string name="welcome_message">Добро пожаловать!</string>
    <string name="about_description">Разработал: %1$s\nГруппа: %2$s\n\nПриложение: Калькулятор геометрических фигур\nВерсия: 2.1.2\nПлатформа: Android</string>

    <!-- Добавьте эту строку для SplashActivity -->
    <string name="developer_message">Студент: Алексеев Павел Васильевич\nГруппа: ИСТ-33</string>
    <!-- Главный экран -->
    <string name="select_figure">Выберите фигуру:</string>
    <string name="calculate">Рассчитать</string>
    <string name="about_author">Об авторе</string>
    <string name="results">Результаты:</string>

    <!-- Фигуры -->
    <string name="square">Квадрат</string>
    <string name="rectangle">Прямоугольник</string>
    <string name="triangle">Треугольник</string>
    <string name="parallelogram">Параллелограмм</string>
    <string name="trapezoid">Трапеция</string>
    <string name="rhombus">Ромб</string>
    <string name="circle">Круг</string>
    <string name="cube">Куб</string>
    <string name="parallelepiped">Параллелепипед</string>
    <string name="cone">Конус</string>
    <string name="pyramid">Пирамида</string>
    <string name="cylinder">Цилиндр</string>
    <string name="sphere">Шар</string>

    <!-- Параметры -->
    <string name="side">Сторона:</string>
    <string name="side_a">Сторона A:</string>
    <string name="side_b">Сторона B:</string>
    <string name="side_c">Сторона C:</string>
    <string name="height">Высота:</string>
    <string name="radius">Радиус:</string>
    <string name="base_side">Сторона основания:</string>

    <!-- Результаты -->
    <string name="perimeter">Периметр: %1$.2f</string>
    <string name="area">Площадь: %1$.2f</string>
    <string name="volume">Объём: %1$.2f</string>
    <string name="surface_area">Площадь поверхности: %1$.2f</string>

    <!-- Ошибки -->
    <string name="error_empty">Заполните все поля!</string>
    <string name="error_invalid">Некорректные данные!</string>

    <!-- О программе -->
    <string name="about_title">О программе</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


    <!-- Фигуры для Spinner -->
    <string-array name="figure_names">
        <item>-- Выберите фигуру --</item>
        <item>Квадрат</item>
        <item>Прямоугольник</item>
        <item>Треугольник</item>
        <item>Параллелограмм</item>
        <item>Трапеция</item>
        <item>Ромб</item>
        <item>Круг</item>
        <item>Куб</item>
        <item>Параллелепипед</item>
        <item>Конус</item>
        <item>Пирамида</item>
        <item>Цилиндр</item>
        <item>Шар</item>
    </string-array>
</resources>