<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    android:padding="32dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="Logo"
            android:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <View
            android:layout_width="60dp"
            android:layout_height="3dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:background="@color/accent" />

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/welcome_message"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/welcomeText0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4dp"
            android:text="@string/developer_message"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/welcomeText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4dp"
            android:text="@string/author_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/welcomeText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4dp"
            android:text="@string/author_group"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </LinearLayout>

</RelativeLayout>